# PitStopManager

./: .gitignore  README.md  manage.py  pyproject.toml
apps/core/: admin.py  forms.py  models.py  utils.py  views.py
apps/customers/: admin.py  forms.py  models.py  urls.py  views.py
apps/customers/migrations/: 0001_initial.py  0002_alter_customer_telefone.py  0003_alter_customer_telefone.py
apps/inventory/: admin.py  forms.py  models.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py
apps/scheduling/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/scheduling/migrations/: 0001_initial.py  0002_initial.py
apps/services/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/services/migrations/: 0001_initial.py  0002_alter_serviceorder_descricao_concerto_and_more.py  0003_alter_serviceorder_quilometragem.py
apps/vehicles/: admin.py  forms.py  models.py  urls.py  views.py
apps/vehicles/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  MODELS_ANALYSIS.md
static/css/: badges.css  base.css  calendar.css  components.css  dashboard.css  delete-modal.css  forms.css  inventory.css  layout.css  main.css  navbar.css  service-orders.css
static/js/: main.js
static/js/modules/: alerts.js  calendar.js  delete-modal.js  formatting.js  forms.js  inventory.js  kebab-menu.js  navbar.js  scheduling.js  search.js  theme.js  tooltips.js  utils.js  vehicles.js
templates/: base.html
templates/core/: home.html
templates/customers/: customer_detail.html  customer_form.html  customer_list.html
templates/inventory/: product_detail.html  product_form.html  product_list.html
templates/scheduling/: appointment_detail.html  appointment_form.html  appointment_list.html
templates/services/: service_order_detail.html  service_order_form.html  service_order_list.html
templates/vehicles/: vehicle_detail.html  vehicle_form.html  vehicle_list.html
