[project]
name = "pitstopmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = "uv run manage.py runserver"

makemigrate = "uv run manage.py makemigrations"
migrate = "uv run manage.py migrate"

collectstatic = "uv run manage.py collectstatic"
startapp = "uv run manage.py startapp"

createsuperuser = "uv run manage.py createsuperuser"
